--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
   "dependencies": {
     "ansi-colors": "3.2.4",
     "remark": "10.0.1",
-    "remark-html": "9.0.0",
-    "svgo": "1.2.2"
+    "remark-html": "9.0.0"
   },
   "devDependencies": {}
 }
